# Anime

./: .anime-demo.txt  .gitignore  ARCHITECTURE.md  CLI_USAGE.md  DEBUG_LOGGING_CLEANUP_SUMMARY.md  INFRASTRUCTURE.md  INSTALL.md  Makefile  QUICK-START.md  QUICKSTART.md  README-SETUP.md  README.md  SUMMARY.md  TRY_IT_NOW.md  go.mod  go.sum  main.go
anime-cli/cmd/: models.go
anime-desktop/src/: App.tsx
anime-desktop/src-tauri/: Cargo.toml
anime-desktop/src-tauri/src/: lib.rs  main.rs
anime-desktop/src-tauri/src/lambda/: client.rs  commands.rs  types.rs
anime-desktop/src-tauri/src/server/: commands.rs  mod.rs  monitor.rs  ssh.rs
app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/docs/: CREATIVE_TOOLS_API.md  CREATIVE_TOOLS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  LAMBDA_FEATURES_TEST_REPORT.md  QUICKSTART.md  README.md  TERMINAL_TEST_REPORT.md  TESTING_DOCUMENTATION_MAP.md  TESTING_INDEX.md  TESTING_QUICK_START.md  TESTING_SUMMARY.md  TODOS_SEED_SUMMARY.md  VISUAL_REFERENCE_GUIDE.md  VISUAL_TESTING_CHECKLIST.md  coverage-architecture.md  coverage-ui-patterns.md  film-coverage-research.md
app/src/: index.css
app/src-tauri/: Cargo.toml  INSTALL_COMMANDS.md  TODOS_IMPLEMENTATION.md  TODOS_QUICK_START.md  tauri.conf.json
cli/: .gitignore  CLI_USAGE.md  COLLECTION_WORKFLOWS.md  COLLECTION_WORKFLOWS_SUMMARY.md  COST_AUTO_DETECTION.md  COST_FIX_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  Makefile  QUICK-START.md  QUICKSTART.md  QUICK_START_CARD.md  RUN_SERVICES.md  START_HERE.md  STATUS_COLORIZATION.md  STRUCTURED_LOGGING.md  TRY_IT_NOW.md  WALKTHROUGH.md  go.mod  go.sum  inventory.ini  main.go  setup-gh200.yml
cli/B2002/: cinema
cli/cmd/: add.go  alias_ollama.go  aliases.go  animate.go  animate.go.bak  backup.go  billing.go  bootstrap.go  browse_workflows.go  db.go  (+158 more)
cmd/: add.go  bootstrap.go  config.go  deploy.go  install_new.go  interactive.go  modules.go  packages.go  remove.go  root.go  status.go  tree.go  wizard.go
docs/: GH200_INFERENCE_MAZE.md  PROOF_OF_WORKING.md  anime_cli_inspection_report.md  conversational-finetuning-architecture.md  coverage-evaluation-framework.md  screenplay-ai-architecture-optimized.md  screenplay-ai-architecture.md
(+638 files in other folders)
